how to build card lists.

--- a/src/App.css
+++ b/src/App.css
@@ -30,9 +30,9 @@
   cursor: pointer;
 }
 
-.button2 {
+.button-blue {
   background-color: #008cba;
 }
-.button3 {
+.button-red {
   background-color: #f44336;
 }
